kubernetes_deployment/product-api/product-mongodb-ss.yml
# statefulset for mongodb
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: product-api-mongodb-ss
  labels:
    app: product-api-mongodb-ss
    namespace: product-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api-mongodb-ss
      namespace: product-ns
  serviceName: product-api-mongodb-svc
  template:
    metadata:
      labels:
        app: product-api-mongodb-ss
        namespace: product-ns
    spec:
      containers:
      - name: mongodb
        image: img-reg:5000/mongo:dev
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: product-api-mongodb-pv-claim
          mountPath: /data/db
      volumes:
      - name: product-api-mongodb-pv-claim
        persistentVolumeClaim:
          claimName: product-api-mongodb-pv-claim
