kubernetes_deployment/product-api/product-api-svc.yml
# service for the product-api-dp
apiVersion: v1
kind: Service
metadata:
  name: product-api-svc
  labels:
    app: product-api
    namespace: product-ns
spec:
  ports:
  - port: 50052
    name: grpc-port
    targetPort: 50052
    protocol: TCP
  - port: 8081
    name: http-port
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
  selector:
    app: product-api
